// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> renders Horizontal ProgressBar 1`] = `
<RNCProgressBar
  animating={true}
  color="blue"
  indeterminate={true}
  state=""
  styleAttr="Horizontal"
/>
`;

exports[`<ProgressBar /> renders Inverse ProgressBar 1`] = `
<RNCProgressBar
  animating={true}
  color="blue"
  indeterminate={true}
  state=""
  styleAttr="Normal"
  typeAttr="Inverse"
/>
`;

exports[`<ProgressBar /> renders enabled ProgressBar 1`] = `
<RNCProgressBar
  animating={true}
  color="blue"
  indeterminate={true}
  state=""
  styleAttr="Normal"
/>
`;
